src/main/java/com/nspm/antlr4/gen/H3CParser.java
// Generated from /Users/chenpeiqi/courses/大三/大三下/实训/npsm/src/main/java/com/nspm/antlr4/H3C.g4 by ANTLR 4.8
package com.nspm.antlr4.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import sun.security.pkcs11.wrapper.CK_LOCKMUTEX;

import javax.validation.constraints.Null;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class H3CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, RETRUN=90, INTERFACE=91, ROUTEAGGREGATION=92, TETHERNET=93, 
		METHERNET=94, BLADE=95, REGEX_IP6=96, REGEX_IP_MASK=97, REGEX_IP_RANGE=98, 
		REGEX_IP_ADDRESS=99, REGEX_IP=100, PORT=101, INT=102, COMMENT=103, EOL=104, 
		WS=105, NEWLINE=106, CJK=107, Basic_Latin=108, UNICODE=109;
	public static final int
		RULE_config = 0, RULE_line = 1, RULE_commentLine = 2, RULE_blankLine = 3, 
		RULE_commandLine = 4, RULE_knownCommand = 5, RULE_unknownCommand = 6, 
		RULE_version = 7, RULE_hostname = 8, RULE_contextRule = 9, RULE_contextSubtree = 10, 
		RULE_interfaceRule = 11, RULE_interfaceSubtree = 12, RULE_interfaceRouteAggregationPriority = 13, 
		RULE_interfaceBridgeAggregation = 14, RULE_routeAggregationRule = 15, 
		RULE_routeAggregationRuleSubtree = 16, RULE_ethernetRule = 17, RULE_tethernetRuleSubtree = 18, 
		RULE_methernetRuleSubtree = 19, RULE_securityZoneRule = 20, RULE_securityZoneRuleSubtree = 21, 
		RULE_objectPolicyRule = 22, RULE_objectPolicyRuleSubtree = 23, RULE_zonePairRule = 24, 
		RULE_zonePairRuleSubtree = 25, RULE_lineRule = 26, RULE_lineRuleSubtree = 27, 
		RULE_routeRule = 28, RULE_snmpAgentRule = 29, RULE_redundancyRule = 30, 
		RULE_redundancyRuleSubtree = 31, RULE_redundancyNodeRuleSubtree = 32, 
		RULE_aclRule = 33, RULE_aclRuleSubtree = 34, RULE_source = 35, RULE_destination = 36, 
		RULE_roleRule = 37, RULE_roleRuleSubTree = 38, RULE_roleLevel = 39, RULE_userClassRule = 40, 
		RULE_userClassRuleSubTree = 41, RULE_sessionRule = 42, RULE_objectGroupRule = 43, 
		RULE_objectGroupSubTree = 44, RULE_ws = 45, RULE_eol = 46, RULE_word = 47, 
		RULE_description = 48, RULE_comment = 49, RULE_group = 50, RULE_protocal = 51, 
		RULE_service = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"config", "line", "commentLine", "blankLine", "commandLine", "knownCommand", 
			"unknownCommand", "version", "hostname", "contextRule", "contextSubtree", 
			"interfaceRule", "interfaceSubtree", "interfaceRouteAggregationPriority", 
			"interfaceBridgeAggregation", "routeAggregationRule", "routeAggregationRuleSubtree", 
			"ethernetRule", "tethernetRuleSubtree", "methernetRuleSubtree", "securityZoneRule", 
			"securityZoneRuleSubtree", "objectPolicyRule", "objectPolicyRuleSubtree", 
			"zonePairRule", "zonePairRuleSubtree", "lineRule", "lineRuleSubtree", 
			"routeRule", "snmpAgentRule", "redundancyRule", "redundancyRuleSubtree", 
			"redundancyNodeRuleSubtree", "aclRule", "aclRuleSubtree", "source", "destination", 
			"roleRule", "roleRuleSubTree", "roleLevel", "userClassRule", "userClassRuleSubTree", 
			"sessionRule", "objectGroupRule", "objectGroupSubTree", "ws", "eol", 
			"word", "description", "comment", "group", "protocal", "service"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'version'", "'sysname'", "'context'", "'id'", "'description'", 
			"'context start'", "'location'", "'blade-controller-team'", "'allocate'", 
			"'interface'", "'share'", "'to'", "'capability'", "'throughput'", "'kbps'", 
			"'session'", "'maximum'", "'member'", "'ip'", "'address'", "'nat'", "'server'", 
			"'global'", "'inside'", "'reversible'", "'outbound'", "'priority'", "'Bridge-Aggregation'", 
			"'vlan-type'", "'port'", "'link-mode'", "'route'", "'link-aggregation'", 
			"'qos'", "'binding'", "'security-zone'", "'name'", "'import'", "'object-policy'", 
			"'rule'", "'accelerate'", "'zone-pair'", "'security'", "'source'", "'destination'", 
			"' packet-filter'", "'line'", "'class'", "'con'", "'vty'", "'user-role'", 
			"'authentication-mode'", "'idle-timeout'", "'route-static'", "'snmp-agent'", 
			"'redundancy'", "'group'", "'preempt-delay'", "'node'", "'bind'", "'track'", 
			"'acl'", "'basic'", "'advanced'", "'permit'", "'role'", "'level-'", "'network-admin'", 
			"'network-operator'", "'local-user'", "'manage'", "'password'", "'hash'", 
			"'service-type'", "'authorization-attribute'", "'object-group'", "'network'", 
			"'host'", "'subnet'", "'range'", "'eq'", "'#'", "'tcp'", "'udp'", "'icmp'", 
			"'ssh'", "'telnet'", "'http'", "'https'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "RETRUN", "INTERFACE", "ROUTEAGGREGATION", 
			"TETHERNET", "METHERNET", "BLADE", "REGEX_IP6", "REGEX_IP_MASK", "REGEX_IP_RANGE", 
			"REGEX_IP_ADDRESS", "REGEX_IP", "PORT", "INT", "COMMENT", "EOL", "WS", 
			"NEWLINE", "CJK", "Basic_Latin", "UNICODE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "H3C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public H3CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ConfigContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(H3CParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(H3CParser.NEWLINE, i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).exitConfig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof H3CVisitor ) return ((H3CVisitor<? extends T>)visitor).visitConfig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
//		System.out.println(_localctx.getText());
//		System.out.println(_localctx.depth());
//		System.out.println(_localctx.toString());
		enterRule(_localctx, 0, RULE_config);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(106);
					line();
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(112);
				match(NEWLINE);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public CommentLineContext commentLine() {
			return getRuleContext(CommentLineContext.class,0);
		}
		public BlankLineContext blankLine() {
			return getRuleContext(BlankLineContext.class,0);
		}
		public CommandLineContext commandLine() {
			return getRuleContext(CommandLineContext.class,0);
		}
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof H3CVisitor ) return ((H3CVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
//		System.out.println(_localctx.getText());
//		System.out.println(_localctx.depth());
//		System.out.println(_localctx.toString());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				commentLine();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				blankLine();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				commandLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentLineContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public CommentLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).enterCommentLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).exitCommentLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof H3CVisitor ) return ((H3CVisitor<? extends T>)visitor).visitCommentLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentLineContext commentLine() throws RecognitionException {
		CommentLineContext _localctx = new CommentLineContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_commentLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			comment();
			setState(124);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlankLineContext extends ParserRuleContext {
		public EolContext eol() {
			return getRuleContext(EolContext.class,0);
		}
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public BlankLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blankLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).enterBlankLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).exitBlankLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof H3CVisitor ) return ((H3CVisitor<? extends T>)visitor).visitBlankLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlankLineContext blankLine() throws RecognitionException {
		BlankLineContext _localctx = new BlankLineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_blankLine);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(126);
				ws();
				}
				break;
			}
			setState(129);
			eol();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandLineContext extends ParserRuleContext {
		public KnownCommandContext knownCommand() {
			return getRuleContext(KnownCommandContext.class,0);
		}
		public UnknownCommandContext unknownCommand() {
			return getRuleContext(UnknownCommandContext.class,0);
		}
		public CommandLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).enterCommandLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).exitCommandLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof H3CVisitor ) return ((H3CVisitor<? extends T>)visitor).visitCommandLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandLineContext commandLine() throws RecognitionException {
		CommandLineContext _localctx = new CommandLineContext(_ctx, getState());
		if(_localctx.knownCommand()!=null ){
			List<TerminalNode> lst = _localctx.knownCommand().contextRule().INT();
			for (TerminalNode node: lst
			) {
				System.out.println(node.getText());
			}
		}
//		System.out.println(_localctx.getText());
//		System.out.println(_localctx.depth());
//		System.out.println(_localctx.toString());


		enterRule(_localctx, 8, RULE_commandLine);
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				knownCommand();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				unknownCommand();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KnownCommandContext extends ParserRuleContext {
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public HostnameContext hostname() {
			return getRuleContext(HostnameContext.class,0);
		}
		public ContextRuleContext contextRule() {
			return getRuleContext(ContextRuleContext.class,0);
		}
		public InterfaceRuleContext interfaceRule() {
			return getRuleContext(InterfaceRuleContext.class,0);
		}
		public RouteAggregationRuleContext routeAggregationRule() {
			return getRuleContext(RouteAggregationRuleContext.class,0);
		}
		public EthernetRuleContext ethernetRule() {
			return getRuleContext(EthernetRuleContext.class,0);
		}
		public SecurityZoneRuleContext securityZoneRule() {
			return getRuleContext(SecurityZoneRuleContext.class,0);
		}
		public ZonePairRuleContext zonePairRule() {
			return getRuleContext(ZonePairRuleContext.class,0);
		}
		public LineRuleContext lineRule() {
			return getRuleContext(LineRuleContext.class,0);
		}
		public RouteRuleContext routeRule() {
			return getRuleContext(RouteRuleContext.class,0);
		}
		public SnmpAgentRuleContext snmpAgentRule() {
			return getRuleContext(SnmpAgentRuleContext.class,0);
		}
		public RedundancyRuleContext redundancyRule() {
			return getRuleContext(RedundancyRuleContext.class,0);
		}
		public AclRuleContext aclRule() {
			return getRuleContext(AclRuleContext.class,0);
		}
		public RoleRuleContext roleRule() {
			return getRuleContext(RoleRuleContext.class,0);
		}
		public UserClassRuleContext userClassRule() {
			return getRuleContext(UserClassRuleContext.class,0);
		}
		public SessionRuleContext sessionRule() {
			return getRuleContext(SessionRuleContext.class,0);
		}
		public ObjectGroupRuleContext objectGroupRule() {
			return getRuleContext(ObjectGroupRuleContext.class,0);
		}
		public TerminalNode RETRUN() { return getToken(H3CParser.RETRUN, 0); }
		public KnownCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_knownCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).enterKnownCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof H3CListener ) ((H3CListener)listener).exitKnownCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof H3CVisitor ) return ((H3CVisitor<? extends T>)visitor).visitKnownCommand(this);
			else return visitor.visitChildren(this);
		}
	}
